--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <h1 class="company-name">Fresh <span class="dif-color-comp-name">Stats</span></h1>
         </div>
         <div class="right-header">
-            <i class="fa-solid fa-bars"></i>
+            <div>
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <h2 class="header-link">NBA Stats</h2>
             <h2 class="header-link">Gallery</h2>
             <h2 class="header-link">About</h2>
