--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         </div>
     </header>
 
+    <div class="mobile-links">
+            <h2 class="mobile-link">NBA Stats</h2>
+            <h2 class="mobile-link">Gallery</h2>
+            <h2 class="mobile-link">About</h2>
+    </div>
 
     <div class="main-area">
         <div class="standings-div">
