--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
 <body>
     <header>
         <div class="left-header">
-            <i class="fa-solid fa-basketball"></i>
+            <a href="../index.html"><i class="fa-solid fa-basketball"></i></a>
             <h1 class="company-name">Fresh <span class="dif-color-comp-name">Stats</span></h1>
         </div>
         <div class="right-header">
-            <div>
+            <div class="burger-menu">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <h2 class="header-link">NBA Stats</h2>
-            <h2 class="header-link">Gallery</h2>
-            <h2 class="header-link">About</h2>
+            <div class="open-burger-menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <a class="header-link" href="./HTML/nba-stats.html">NBA Stats</a>
+            <a class="header-link" href="./HTML/gallery.html">Gallery</a>
+            <a class="header-link" href="./HTML/about.html">About</a>
         </div>
     </header>
 
     <div class="mobile-links">
-            <h2 class="mobile-link">NBA Stats</h2>
-            <h2 class="mobile-link">Gallery</h2>
-            <h2 class="mobile-link">About</h2>
+            <a class="mobile-link" href="./HTML/nba-stats.html">NBA Stats</a>
+            <a class="mobile-link" href="./HTML/gallery.html">Gallery</a>
+            <a class="mobile-link" href="./HTML/about.html">About</a>
     </div>
 
     <div class="main-area">
@@ -149,5 +152,8 @@
             <p>Copyright 2024 Drew Veilleux, LLC</p>
         </div>
     </footer>
+
+    <script src="./script.js"></script>
+
 </body>
 </html>
