--- a/HTML/about.html
+++ b/HTML/about.html
@@ -32,8 +32,8 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="../index.html">Home</a>
-        <a class="mobile-link" href="./HTML/nba-stats.html">NBA Stats</a>
-        <a class="mobile-link" href="./HTML/gallery.html">Gallery</a>
+        <a class="mobile-link" href="./nba-stats.html">NBA Stats</a>
+        <a class="mobile-link" href="./gallery.html">Gallery</a>
     </div>
 
     <script src="../Java/about.js"></script>
