--- a/HTML/nba-stats.html
+++ b/HTML/nba-stats.html
@@ -31,8 +31,8 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="../index.html">Home</a>
-        <a class="mobile-link" href="../HTML/gallery.html">Gallery</a>
-        <a class="mobile-link" href="../HTML/">About</a>
+        <a class="mobile-link" href="./gallery.html">Gallery</a>
+        <a class="mobile-link" href="./about.html">About</a>
     </div>
 
 
