--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -33,8 +33,8 @@
     
     <div class="mobile-links">
         <a class="mobile-link" href="../index.html">Home</a>
-        <a class="mobile-link" href="./HTML/nba-stats.html">NBA Stats</a>
-        <a class="mobile-link" href="./HTML/about.html">About</a>
+        <a class="mobile-link" href="./nba-stats.html">NBA Stats</a>
+        <a class="mobile-link" href="./about.html">About</a>
     </div>
     
 
