--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             <p>207.874.8250</p>
         </div>
         <div class="middle-footer">
-            <i class="fa-brands fa-snapchat"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <a href=""><i class="fa-brands fa-snapchat"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
         </div>
         <div class="right-footer">
             <p>Copyright 2024 Drew Veilleux, LLC</p>
