--- a/HTML/about.html
+++ b/HTML/about.html
@@ -36,6 +36,31 @@
         <a class="mobile-link" href="./gallery.html">Gallery</a>
     </div>
 
+    <section>
+        <div class="">
+            <img src="" alt="">
+            <h1>Drew Veilleux</h1>
+            <p></p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="left-footer">
+            <p>Portland High School</p>
+            <p>284 Cumberland Ave. Portland, ME 04101</p>
+            <p>207.874.8250</p>
+        </div>
+        <div class="middle-footer">
+            <a href="https://github.com/drewvex23"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/drewveilleux?mx=2"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/drew_.vex24/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="right-footer">
+            <p>Copyright 2024 Drew Veilleux, LLC</p>
+        </div>
+    </footer>
+
+
     <script src="../Java/about.js"></script>
 
 </body>
