--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -61,9 +61,9 @@
             <p>207.874.8250</p>
         </div>
         <div class="middle-footer">
-            <i class="fa-brands fa-snapchat"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <a href="https://github.com/drewvex23"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/drewveilleux?mx=2"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/drew_.vex24/"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <div class="right-footer">
             <p>Copyright 2024 Drew Veilleux, LLC</p>
