--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="last-ten-record-col">L10</p>
                 <p class="win-streak-col">Strk</p>
             </div>
-            <div class="stats">
+            <div class="eastern-stats">
                 <div class="ranks">
                     <p>1.</p>
                     <p>2.</p>
@@ -61,59 +61,329 @@
                 </div>
                 <div class="teams">
                     <p>Celtics</p>
-                    <p>Bucks</p>
-                    <p>Magic</p>
                     <p>Knicks</p>
+                    <p>Bucks</p>
                     <p>Cavaliers</p>
+                    <p>Magic</p>
                 </div>
                 <div class="wins">
-                    <p>62</p>
+                    <p>64</p>
+                    <p>50</p>
+                    <p>49</p>
+                    <p>48</p>
                     <p>47</p>
-                    <p>46</p>
-                    <p>46</p>
-                    <p>46</p>
                 </div>
                 <div class="losses">
-                    <p>16</p>
-                    <p>31</p>
-                    <p>32</p>
+                    <p>18</p>
                     <p>32</p>
                     <p>33</p>
+                    <p>34</p>
+                    <p>35</p>
                 </div>
                 <div class="home">
-                    <p>35-3</p>
-                    <p>29-11</p>
-                    <p>28-12</p>
-                    <p>25-14</p>
-                    <p>24-14</p>
+                    <p>37-4</p>
+                    <p>27-14</p>
+                    <p>31-11</p>
+                    <p>26-15</p>
+                    <p>29-12</p>
                 </div>
                 <div class="away">
-                    <p>27-13</p>
-                    <p>18-20</p>
-                    <p>18-20</p>
-                    <p>21-18</p>
+                    <p>27-14</p>
+                    <p>23-18</p>
+                    <p>18-22</p>
                     <p>22-19</p>
+                    <p>18-23</p>
                 </div>
                 <div class="last-ten">
-                    <p>8-2</p>
-                    <p>3-7</p>
+                    <p>7-3</p>
                     <p>6-4</p>
-                    <p>5-5</p>
                     <p>3-7</p>
+                    <p>4-6</p>
+                    <p>5-5</p>
                 </div>
                 <div class="streak">
+                    <p>W2</p>
                     <p>W5</p>
-                    <p>L4</p>
+                    <p>L2</p>
+                    <p>L1</p>
                     <p>W1</p>
-                    <p>W1</p>
-                    <p>L3</p>
                 </div>
             </div>
 
-            <div class="extra-teams">
-                <div class="see-more-div">
+            <div class="western-stats">
+                <div class="ranks">
+                    <p>1.</p>
+                    <p>2.</p>
+                    <p>3.</p>
+                    <p>4.</p>
+                    <p>5.</p>
+                </div>
+                <div class="teams">
+                    <p>Celtics</p>
+                    <p>Knicks</p>
+                    <p>Bucks</p>
+                    <p>Cavaliers</p>
+                    <p>Magic</p>
+                </div>
+                <div class="wins">
+                    <p>64</p>
+                    <p>50</p>
+                    <p>49</p>
+                    <p>48</p>
+                    <p>47</p>
+                </div>
+                <div class="losses">
+                    <p>18</p>
+                    <p>32</p>
+                    <p>33</p>
+                    <p>34</p>
+                    <p>35</p>
+                </div>
+                <div class="home">
+                    <p>37-4</p>
+                    <p>27-14</p>
+                    <p>31-11</p>
+                    <p>26-15</p>
+                    <p>29-12</p>
+                </div>
+                <div class="away">
+                    <p>27-14</p>
+                    <p>23-18</p>
+                    <p>18-22</p>
+                    <p>22-19</p>
+                    <p>18-23</p>
+                </div>
+                <div class="last-ten">
+                    <p>7-3</p>
+                    <p>6-4</p>
+                    <p>3-7</p>
+                    <p>4-6</p>
+                    <p>5-5</p>
+                </div>
+                <div class="streak">
+                    <p>W2</p>
+                    <p>W5</p>
+                    <p>L2</p>
+                    <p>L1</p>
+                    <p>W1</p>
+                </div>
+            </div>
+
+            <div class="eastern-extra-teams">
+                <div class="eastern-see-more-div">
                     <i class="fa-solid fa-circle-arrow-down"></i>
                     <p>See More</p>
+                </div>
+                <div class="eastern-see-more-stats">
+                    <div class="ranks">
+                        <p>6.</p>
+                        <p>7.</p>
+                        <p>8.</p>
+                        <p>9.</p>
+                        <p>10.</p>
+                        <p>11.</p>
+                        <p>12.</p>
+                        <p>13.</p>
+                        <p>14.</p>
+                        <p>15.</p>
+                    </div>
+                    <div class="teams">
+                        <p>Pacers</p>
+                        <p>76ers</p>
+                        <p>Heat</p>
+                        <p>Bulls</p>
+                        <p>Hawks</p>
+                        <p>Nets</p>
+                        <p>Raptors</p>
+                        <p>Hornets</p>
+                        <p>Wizards</p>
+                        <p>Pistons</p>
+                    </div>
+                    <div class="wins">
+                        <p>47</p>
+                        <p>47</p>
+                        <p>46</p>
+                        <p>39</p>
+                        <p>36</p>
+                        <p>32</p>
+                        <p>25</p>
+                        <p>21</p>
+                        <p>15</p>
+                        <p>14</p>
+                    </div>
+                    <div class="losses">
+                        <p>35</p>
+                        <p>35</p>
+                        <p>36</p>
+                        <p>43</p>
+                        <p>46</p>
+                        <p>50</p>
+                        <p>57</p>
+                        <p>61</p>
+                        <p>67</p>
+                        <p>68</p>
+                    </div>
+                    <div class="home">
+                        <p>26-15</p>
+                        <p>25-16</p>
+                        <p>25-16</p>
+                        <p>19-22</p>
+                        <p>15-26</p>
+                        <p>12-29</p>
+                        <p>14-27</p>
+                        <p>11-30</p>
+                        <p>7-34</p>
+                        <p>7-33	</p>
+                    </div>
+                    <div class="away">
+                        <p>21-20</p>
+                        <p>22-19</p>
+                        <p>24-17</p>
+                        <p>19-22</p>
+                        <p>15-26</p>
+                        <p>12-29</p>
+                        <p>11-30</p>
+                        <p>10-31</p>
+                        <p>8-33	</p>
+                        <p>7-35</p>
+                    </div>
+                    <div class="last-ten">
+                        <p>7-3</p>
+                        <p>8-2</p>
+                        <p>7-3</p>
+                        <p>5-5</p>
+                        <p>3-7</p>
+                        <p>5-5</p>
+                        <p>2-8</p>
+                        <p>3-7</p>
+                        <p>1-9</p>
+                        <p>2-8</p>
+                    </div>
+                    <div class="streak">
+                        <p>W1</p>
+                        <p>W8</p>
+                        <p>W2</p>
+                        <p>L1</p>
+                        <p>L6</p>
+                        <p>L2</p>
+                        <p>L4</p>
+                        <p>W1</p>
+                        <p>L6</p>
+                        <p>L1</p>
+                    </div>
+                </div>
+                <div class="eastern-close-more-div">
+                    <i class="fa-solid fa-circle-arrow-up"></i>
+                    <p>Close</p>
+                </div>
+            </div>
+
+            <div class="western-extra-teams">
+                <div class="western-see-more-div">
+                    <i class="fa-solid fa-circle-arrow-down"></i>
+                    <p>See More</p>
+                </div>
+                <div class="western-see-more-stats">
+                    <div class="ranks">
+                        <p>6.</p>
+                        <p>7.</p>
+                        <p>8.</p>
+                        <p>9.</p>
+                        <p>10.</p>
+                        <p>11.</p>
+                        <p>12.</p>
+                        <p>13.</p>
+                        <p>14.</p>
+                        <p>15.</p>
+                    </div>
+                    <div class="teams">
+                        <p>Pacers</p>
+                        <p>76ers</p>
+                        <p>Heat</p>
+                        <p>Bulls</p>
+                        <p>Hawks</p>
+                        <p>Nets</p>
+                        <p>Raptors</p>
+                        <p>Hornets</p>
+                        <p>Wizards</p>
+                        <p>Pistons</p>
+                    </div>
+                    <div class="wins">
+                        <p>47</p>
+                        <p>47</p>
+                        <p>46</p>
+                        <p>39</p>
+                        <p>36</p>
+                        <p>32</p>
+                        <p>25</p>
+                        <p>21</p>
+                        <p>15</p>
+                        <p>14</p>
+                    </div>
+                    <div class="losses">
+                        <p>35</p>
+                        <p>35</p>
+                        <p>36</p>
+                        <p>43</p>
+                        <p>46</p>
+                        <p>50</p>
+                        <p>57</p>
+                        <p>61</p>
+                        <p>67</p>
+                        <p>68</p>
+                    </div>
+                    <div class="home">
+                        <p>26-15</p>
+                        <p>25-16</p>
+                        <p>25-16</p>
+                        <p>19-22</p>
+                        <p>15-26</p>
+                        <p>12-29</p>
+                        <p>14-27</p>
+                        <p>11-30</p>
+                        <p>7-34</p>
+                        <p>7-33	</p>
+                    </div>
+                    <div class="away">
+                        <p>21-20</p>
+                        <p>22-19</p>
+                        <p>24-17</p>
+                        <p>19-22</p>
+                        <p>15-26</p>
+                        <p>12-29</p>
+                        <p>11-30</p>
+                        <p>10-31</p>
+                        <p>8-33	</p>
+                        <p>7-35</p>
+                    </div>
+                    <div class="last-ten">
+                        <p>7-3</p>
+                        <p>8-2</p>
+                        <p>7-3</p>
+                        <p>5-5</p>
+                        <p>3-7</p>
+                        <p>5-5</p>
+                        <p>2-8</p>
+                        <p>3-7</p>
+                        <p>1-9</p>
+                        <p>2-8</p>
+                    </div>
+                    <div class="streak">
+                        <p>W1</p>
+                        <p>W8</p>
+                        <p>W2</p>
+                        <p>L1</p>
+                        <p>L6</p>
+                        <p>L2</p>
+                        <p>L4</p>
+                        <p>W1</p>
+                        <p>L6</p>
+                        <p>L1</p>
+                    </div>
+                </div>
+                <div class="western-close-more-div">
+                    <i class="fa-solid fa-circle-arrow-up"></i>
+                    <p>Close</p>
                 </div>
             </div>
         </div>
@@ -144,9 +414,9 @@
             <p>207.874.8250</p>
         </div>
         <div class="middle-footer">
-            <a href=""><i class="fa-brands fa-snapchat"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/drewvex23"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/drewveilleux?mx=2"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/drew_.vex24/"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <div class="right-footer">
             <p>Copyright 2024 Drew Veilleux, LLC</p>
