--- a/index.html
+++ b/index.html
@@ -119,53 +119,53 @@
                     <p>5.</p>
                 </div>
                 <div class="teams">
-                    <p>Celtics</p>
-                    <p>Knicks</p>
-                    <p>Bucks</p>
-                    <p>Cavaliers</p>
-                    <p>Magic</p>
+                    <p>Thunder</p>
+                    <p>Nuggets</p>
+                    <p>T-Wolves</p>
+                    <p>Clippers</p>
+                    <p>Mavericks</p>
                 </div>
                 <div class="wins">
-                    <p>64</p>
+                    <p>57</p>
+                    <p>57</p>
+                    <p>56</p>
+                    <p>51</p>
                     <p>50</p>
-                    <p>49</p>
-                    <p>48</p>
-                    <p>47</p>
                 </div>
                 <div class="losses">
-                    <p>18</p>
+                    <p>25</p>
+                    <p>25</p>
+                    <p>26</p>
+                    <p>31</p>
                     <p>32</p>
-                    <p>33</p>
-                    <p>34</p>
-                    <p>35</p>
                 </div>
                 <div class="home">
-                    <p>37-4</p>
-                    <p>27-14</p>
-                    <p>31-11</p>
-                    <p>26-15</p>
-                    <p>29-12</p>
+                    <p>33-8</p>
+                    <p>33-8</p>
+                    <p>30-11</p>
+                    <p>25-16</p>
+                    <p>25-16</p>
                 </div>
                 <div class="away">
-                    <p>27-14</p>
-                    <p>23-18</p>
-                    <p>18-22</p>
-                    <p>22-19</p>
-                    <p>18-23</p>
+                    <p>24-17</p>
+                    <p>24-17</p>
+                    <p>26-15</p>
+                    <p>26-15</p>
+                    <p>25-16</p>
                 </div>
                 <div class="last-ten">
                     <p>7-3</p>
                     <p>6-4</p>
-                    <p>3-7</p>
-                    <p>4-6</p>
-                    <p>5-5</p>
+                    <p>6-4</p>
+                    <p>6-4</p>
+                    <p>7-3</p>
                 </div>
                 <div class="streak">
-                    <p>W2</p>
                     <p>W5</p>
-                    <p>L2</p>
-                    <p>L1</p>
                     <p>W1</p>
+                    <p>L1</p>
+                    <p>L3</p>
+                    <p>L2</p>
                 </div>
             </div>
 
@@ -297,88 +297,88 @@
                         <p>15.</p>
                     </div>
                     <div class="teams">
-                        <p>Pacers</p>
-                        <p>76ers</p>
-                        <p>Heat</p>
-                        <p>Bulls</p>
-                        <p>Hawks</p>
-                        <p>Nets</p>
-                        <p>Raptors</p>
-                        <p>Hornets</p>
-                        <p>Wizards</p>
-                        <p>Pistons</p>
+                        <p>Suns</p>
+                        <p>Pelicans</p>
+                        <p>Lakers</p>
+                        <p>Kings</p>
+                        <p>Warriors</p>
+                        <p>Rockets</p>
+                        <p>Jazz</p>
+                        <p>Grizzlies</p>
+                        <p>Spurs</p>
+                        <p>T-Blaze</p>
                     </div>
                     <div class="wins">
-                        <p>47</p>
+                        <p>49</p>
+                        <p>49</p>
                         <p>47</p>
                         <p>46</p>
-                        <p>39</p>
-                        <p>36</p>
-                        <p>32</p>
-                        <p>25</p>
+                        <p>46</p>
+                        <p>41</p>
+                        <p>31</p>
+                        <p>27</p>
+                        <p>22</p>
                         <p>21</p>
-                        <p>15</p>
-                        <p>14</p>
                     </div>
                     <div class="losses">
-                        <p>35</p>
+                        <p>33</p>
+                        <p>33</p>
                         <p>35</p>
                         <p>36</p>
-                        <p>43</p>
-                        <p>46</p>
-                        <p>50</p>
-                        <p>57</p>
+                        <p>36</p>
+                        <p>41</p>
+                        <p>51</p>
+                        <p>55</p>
+                        <p>60</p>
                         <p>61</p>
-                        <p>67</p>
-                        <p>68</p>
                     </div>
                     <div class="home">
-                        <p>26-15</p>
                         <p>25-16</p>
-                        <p>25-16</p>
-                        <p>19-22</p>
-                        <p>15-26</p>
+                        <p>21-19</p>
+                        <p>28-14</p>
+                        <p>24-17</p>
+                        <p>21-20</p>
+                        <p>27-14</p>
+                        <p>21-20</p>
+                        <p>9-32</p>
                         <p>12-29</p>
-                        <p>14-27</p>
                         <p>11-30</p>
-                        <p>7-34</p>
-                        <p>7-33	</p>
                     </div>
                     <div class="away">
-                        <p>21-20</p>
-                        <p>22-19</p>
                         <p>24-17</p>
-                        <p>19-22</p>
-                        <p>15-26</p>
-                        <p>12-29</p>
-                        <p>11-30</p>
+                        <p>28-14</p>
+                        <p>19-21</p>
+                        <p>22-19</p>
+                        <p>25-16</p>
+                        <p>14-27</p>
                         <p>10-31</p>
-                        <p>8-33	</p>
-                        <p>7-35</p>
+                        <p>18-23</p>
+                        <p>10-31</p>
+                        <p>10-31</p>
                     </div>
                     <div class="last-ten">
                         <p>7-3</p>
-                        <p>8-2</p>
+                        <p>5-5</p>
                         <p>7-3</p>
-                        <p>5-5</p>
-                        <p>3-7</p>
-                        <p>5-5</p>
+                        <p>4-6</p>
+                        <p>8-2</p>
+                        <p>4-6</p>
                         <p>2-8</p>
                         <p>3-7</p>
-                        <p>1-9</p>
+                        <p>6-4</p>
                         <p>2-8</p>
                     </div>
                     <div class="streak">
+                        <p>W3</p>
+                        <p>L1</p>
+                        <p>W2</p>
                         <p>W1</p>
-                        <p>W8</p>
+                        <p>W1</p>
                         <p>W2</p>
                         <p>L1</p>
-                        <p>L6</p>
-                        <p>L2</p>
-                        <p>L4</p>
-                        <p>W1</p>
-                        <p>L6</p>
-                        <p>L1</p>
+                        <p>L5</p>
+                        <p>W2</p>
+                        <p>L5</p>
                     </div>
                 </div>
                 <div class="western-close-more-div">
