--- a/HTML/about.html
+++ b/HTML/about.html
@@ -37,10 +37,20 @@
     </div>
 
     <section>
-        <div class="">
-            <img src="" alt="">
+        <div class="about-title">
+            <img src="../images/about-img1.jpg" alt="">
             <h1>Drew Veilleux</h1>
-            <p></p>
+            <p>Class of 2025</p>
+        </div>
+
+        <div class="info-area">
+            <p>Hello! My name is Drew Veilleux. I spent my first three years of high school at Portland High School but am now enrolled for my senior year at Bridgton Academy. I will continue playing basketball for the Bridgton team as I did at Portland since my freshman year. I remain living in Portland with my dog named Blue (pictured below) and my mom, Cassi.</p>
+            <img src="../images/about-img2.jpg" alt="">
+        </div>
+
+        <div class="coding-experience">
+            <p>I spend most of my day at school but when I am not, you will either find me playing basketball or hanging out with friends. When in school, my favorite class is math but coding is a very close second. I have been coding ever since 7th grade but I really started getting into it as a freshman. I have taken three coding courses at Portland High School, Intro to Coding, Data Analysis and Web Development (current). Throughout the course of these classes I have learned Python, HTML, Java Script and CSS. I hope to continue along the path of coding and take another class while at Bridgton. I also hope to use my coding abilities in the real world while I pursue a career in Cyber Security.</p>
+            <img src="../images/about-img3.jpg" alt="">
         </div>
     </section>
 
