--- a/HTML/nba-stats.html
+++ b/HTML/nba-stats.html
@@ -37,6 +37,26 @@
 
 
 
+
+
+
+    <footer>
+        <div class="left-footer">
+            <p>Portland High School</p>
+            <p>284 Cumberland Ave. Portland, ME 04101</p>
+            <p>207.874.8250</p>
+        </div>
+        <div class="middle-footer">
+            <a href="https://github.com/drewvex23"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/drewveilleux?mx=2"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/drew_.vex24/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="right-footer">
+            <p>Copyright 2024 Drew Veilleux, LLC</p>
+        </div>
+    </footer>
+    
+
     <script src="../Java/nba-stats.js"></script>
 
 </body>
