--- a/HTML/nba-stats.html
+++ b/HTML/nba-stats.html
@@ -37,6 +37,114 @@
 
 
 
+    <section>
+        <div class="twenty-twenty">
+            <h2>2020's</h2>
+            <p>2024 | <span>TBD</span> - Atlanta Hawks</p>
+            <p>2023 | <span>Victor Wembanyama</span> - San Antonio Spurs</p>
+            <p>2022 | <span>Palo Banchero</span> - Orlando Magic</p>
+            <p>2021 | <span>Cade Cunningham</span> - Detroit Pistons</p>
+            <p>2020 | <span>Anthony Edwards</span> - Minnesota Timberwolves</p>
+        </div>
+        <div class="twenty-ten">
+            <h2>2010's</h2>
+            <p>2019 | <span>Zion Williamson</span> - New Orleans Pelicans</p>
+            <p>2018 | <span></span> - </p>
+            <p>2017 | <span></span> - </p>
+            <p>2016 | <span></span> - </p>
+            <p>2015 | <span></span> - </p>
+            <p>2014 | <span></span> - </p>
+            <p>2013 | <span></span> - </p>
+            <p>2012 | <span></span> - </p>
+            <p>2011 | <span></span> - </p>
+            <p>2010 | <span></span> - </p>
+        </div>
+        <div class="two-thousands">
+            <h2>2000's</h2>
+            <p>2009 | <span></span> - </p>
+            <p>2008 | <span></span> - </p>
+            <p>2007 | <span></span> - </p>
+            <p>2006 | <span></span> - </p>
+            <p>2005 | <span></span> - </p>
+            <p>2004 | <span></span> - </p>
+            <p>2003 | <span></span> - </p>
+            <p>2002 | <span></span> - </p>
+            <p>2001 | <span></span> - </p>
+            <p>2000 | <span></span> - </p>
+        </div>
+        <div class="nineties">
+            <h2>1990's</h2>
+            <p>1999 | <span></span> - </p>
+            <p>1998 | <span></span> - </p>
+            <p>1997 | <span></span> - </p>
+            <p>1996 | <span></span> - </p>
+            <p>1995 | <span></span> - </p>
+            <p>1994 | <span></span> - </p>
+            <p>1993 | <span></span> - </p>
+            <p>1992 | <span></span> - </p>
+            <p>1991 | <span></span> - </p>
+            <p>1990 | <span></span> - </p>
+        </div>
+        <div class="eighties">
+            <h2>1980's</h2>
+            <p>1989 | <span></span> - </p>
+            <p>1988 | <span></span> - </p>
+            <p>1987 | <span></span> - </p>
+            <p>1986 | <span></span> - </p>
+            <p>1985 | <span></span> - </p>
+            <p>1984 | <span></span> - </p>
+            <p>1983 | <span></span> - </p>
+            <p>1982 | <span></span> - </p>
+            <p>1981 | <span></span> - </p>
+            <p>1980 | <span></span> - </p>
+        </div>
+        <div class="seventies">
+            <h2>1970's</h2>
+            <p>1979 | <span></span> - </p>
+            <p>1978 | <span></span> - </p>
+            <p>1977 | <span></span> - </p>
+            <p>1976 | <span></span> - </p>
+            <p>1975 | <span></span> - </p>
+            <p>1974 | <span></span> - </p>
+            <p>1973 | <span></span> - </p>
+            <p>1972 | <span></span> - </p>
+            <p>1971 | <span></span> - </p>
+            <p>1970 | <span></span> - </p>
+        </div>
+        <div class="sixties">
+            <h2>1960's</h2>
+            <p>1969 | <span></span> - </p>
+            <p>1968 | <span></span> - </p>
+            <p>1967 | <span></span> - </p>
+            <p>1966 | <span></span> - </p>
+            <p>1965 | <span></span> - </p>
+            <p>1964 | <span></span> - </p>
+            <p>1963 | <span></span> - </p>
+            <p>1962 | <span></span> - </p>
+            <p>1961 | <span></span> - </p>
+            <p>1960 | <span></span> - </p>
+        </div>
+        <div class="fifties">
+            <h2>1950's</h2>
+            <p>1959 | <span></span> - </p>
+            <p>1958 | <span></span> - </p>
+            <p>1957 | <span></span> - </p>
+            <p>1956 | <span></span> - </p>
+            <p>1955 | <span></span> - </p>
+            <p>1954 | <span></span> - </p>
+            <p>1953 | <span></span> - </p>
+            <p>1952 | <span></span> - </p>
+            <p>1951 | <span>Gene Melchiorre</span> - Baltimore Hawks</p>
+            <p>1950 | <span>Chuck Share</span> - Boston Celtics</p>
+        </div>
+        <div class="fourties">
+            <h2>1940's</h2>
+            <p>1949 | <span>Howie Shannon</span> - Providence Steam Rollers</p>
+            <p>1948 | <span>Andy Tonkovich</span> - Providence Steam Rollers</p>
+            <p>1947 | <span>Clifton McNeely</span> - Pittsburgh Ironmen</p>
+        </div>
+        
+    </section>
 
 
 
