--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -24,7 +24,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <a class="header-link" href="../index.html">Home</a>
-            <a class="header-link" href="./nba-stats.html">NBA Stats</a>
+            <a class="header-link" href="./draft-history.html">Draft History</a>
             <a class="header-link" href="./about.html">About</a>
         </div>
     </header>
@@ -33,7 +33,7 @@
     <section>
         <div class="mobile-links">
             <a class="mobile-link" href="../index.html">Home</a>
-            <a class="mobile-link" href="./nba-stats.html">NBA Stats</a>
+            <a class="mobile-link" href="./draft-history.html">Draft History</a>
             <a class="mobile-link" href="./about.html">About</a>
         </div>
             
