--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <div class="open-burger-menu">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <a class="header-link" href="./HTML/nba-stats.html">NBA Stats</a>
+            <a class="header-link" href="./HTML/draft-history.html">Draft History</a>
             <a class="header-link" href="./HTML/gallery.html">Gallery</a>
             <a class="header-link" href="./HTML/about.html">About</a>
         </div>
     </header>
 
     <div class="mobile-links">
-            <a class="mobile-link" href="./HTML/nba-stats.html">NBA Stats</a>
+            <a class="mobile-link" href="./HTML/draft-history.html">Draft History</a>
             <a class="mobile-link" href="./HTML/gallery.html">Gallery</a>
             <a class="mobile-link" href="./HTML/about.html">About</a>
     </div>
