--- a/HTML/about.html
+++ b/HTML/about.html
@@ -24,7 +24,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <a class="header-link" href="../index.html">Home</a>
-            <a class="header-link" href="./nba-stats.html">NBA Stats</a>
+            <a class="header-link" href="./draft-history.html">Draft History</a>
             <a class="header-link" href="./gallery.html">Gallery</a>
             
         </div>
@@ -32,7 +32,7 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="../index.html">Home</a>
-        <a class="mobile-link" href="./nba-stats.html">NBA Stats</a>
+        <a class="mobile-link" href="./draft-history.html">Draft History</a>
         <a class="mobile-link" href="./gallery.html">Gallery</a>
     </div>
 
