--- a/HTML/draft-history.html
+++ b/HTML/draft-history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draft History</title>
-    <link rel="stylesheet" href="../CSS/nba-stats.css">
+    <link rel="stylesheet" href="../CSS/draft-history.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
@@ -187,7 +187,7 @@
     </footer>
     
 
-    <script src="../Java/nba-stats.js"></script>
+    <script src="../Java/draft-history.js"></script>
 
 </body>
 </html>
